[gd_scene load_steps=7 format=3 uid="uid://ctks4vnotun50"]

[ext_resource type="Script" path="res://Main/Scripts/Player.gd" id="1_jy7jf"]
[ext_resource type="Shape2D" path="res://Scenes/PlayerStandingCshape.tres" id="2_kwbxy"]
[ext_resource type="Script" path="res://addons/smoothing/smoothing_2d.gd" id="3_0teme"]
[ext_resource type="Texture2D" uid="uid://b5ouxtklikvdv" path="res://Main/Player/PlayerSpriteCrouching.png" id="4_xp88e"]
[ext_resource type="Texture2D" uid="uid://csoqmjht1w4xw" path="res://Main/Player/PlayerSpritesStanding.png" id="5_07gp0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uxsbp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_xp88e")
}],
"loop": true,
"name": &"CROUCH",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_07gp0")
}],
"loop": true,
"name": &"IDLE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_07gp0")
}],
"loop": true,
"name": &"JUMP",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_07gp0")
}],
"loop": true,
"name": &"MOVE",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
position = Vector2(239, 182)
script = ExtResource("1_jy7jf")

[node name="Collisions" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = ExtResource("2_kwbxy")

[node name="CameraSmoothing" type="Node2D" parent="."]
script = ExtResource("3_0teme")

[node name="PlayerAnimatedSprite" type="AnimatedSprite2D" parent="CameraSmoothing"]
position = Vector2(0, 6)
scale = Vector2(0.129032, 0.131868)
sprite_frames = SubResource("SpriteFrames_uxsbp")
animation = &"IDLE"

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2.5)
position_smoothing_enabled = true
position_smoothing_speed = 15.0

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
